<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- "Mark Favorite", should appear as action button if possible -->

    <item
        android:id="@+id/menu_item_search"
        android:title="@string/action_bar_search"
        android:icon="@drawable/ic_action_search"
        android:visible="false"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView" />


    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_action_home"
        android:title="@string/action_overview"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_login"
        android:icon="@drawable/ic_unlock_account"
        android:title="@string/action_login"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings_title"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/ic_tab_contact_info"
        android:title="@string/activity_profile_title"
        app:showAsAction="ifRoom"/>

</menu>