<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="visible">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:layout_height="wrap_content">

            <TextView
                style="@style/HintTextBig"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/contract_description"
                android:hint="@string/hint_contract_type" />

        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:layout_width="0dp"
            android:id="@+id/contract_type_spinner"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/account_radio_group"
        android:checkedButton="@+id/option_create_contract">

        <RadioButton
            android:layout_width="wrap_content"
            android:id="@+id/option_create_contract"
            android:text="@string/field_create_contract"
            android:layout_height="wrap_content" />

        <RadioButton
            android:layout_width="wrap_content"
            android:id="@+id/option_add_contract"
            android:text="@string/field_add_contract"
            android:layout_height="wrap_content" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/manual_contract_address_section"
        android:visibility="visible">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            style="@style/HintTextBig"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/contract_address_field"
                android:hint="@string/hint_contract_Address"
                android:layout_marginBottom="10dp" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

</LinearLayout>