<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/layout_profile_fragment"
    tools:context="smart_contract.csg.ifi.uzh.ch.smartcontracttest.profile.ProfileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:id="@+id/profile_header"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <smart_contract.csg.ifi.uzh.ch.smartcontracttest.common.controls.ProportionalImageView
            android:layout_width="48dp"
            android:layout_margin="16dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:layout_alignParentLeft="true"
            android:src="@drawable/ic_eth_logo_big"
            android:id="@+id/profile_qr_image"/>

        <smart_contract.csg.ifi.uzh.ch.smartcontracttest.common.controls.ProportionalImageView
            android:layout_width="48dp"
            android:layout_margin="16dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_eth_logo_big"
            android:id="@+id/profile_image"/>

    </RelativeLayout>

    <ScrollView
        android:layout_below="@+id/profile_header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColorHint="#ff6d00"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:id="@+id/field_profile_first_name"
                        android:hint="@string/hint_first_name" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColorHint="#ff6d00"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:id="@+id/field_profile_last_name"
                        android:hint="@string/hint_last_name" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:textColorHint="#ff6d00"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPostalAddress"
                    android:id="@+id/field_profile_street"
                    android:hint="@string/hint_street" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:textColorHint="#ff6d00"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/field_profile_city"
                        android:inputType="textPostalAddress"
                        android:hint="@string/hint_city" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColorHint="#ff6d00"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberSigned"
                        android:id="@+id/field_profile_zip"
                        android:hint="@string/hint_zip" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColorHint="#ff6d00"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPostalAddress"
                        android:id="@+id/field_profile_country"
                        android:hint="@string/hint_country" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColorHint="#ff6d00"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPostalAddress"
                        android:id="@+id/field_profile_region"
                        android:hint="@string/hint_area" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:textColorHint="#ff6d00"
                android:layout_height="wrap_content">

                <EditText
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/field_profile_email"
                    android:hint="@string/hint_mail" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:textColorHint="#ff6d00"
                android:layout_height="wrap_content">

                <EditText
                    android:inputType="phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/field_profile_phone"
                    android:hint="@string/hint_phone" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="verify"
            android:visibility="gone"
            android:background="@drawable/button_selector"
            android:gravity="center"
            android:id="@+id/action_verify_identity" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="edit"
            android:visibility="gone"
            android:background="@drawable/button_selector"
            android:gravity="center"
            android:id="@+id/action_edit_identity" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="save"
            android:visibility="gone"
            android:background="@drawable/button_selector"
            android:gravity="center"
            android:id="@+id/action_save_identity" />

    </LinearLayout>

</LinearLayout>
