<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="smart_contract.csg.ifi.uzh.ch.smartcontracttest.detail.create.ContractDeployFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/hint_title"
                    android:id="@+id/contract_title" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:inputType="numberDecimal"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_price"
                        android:id="@+id/contract_price" />

                </android.support.design.widget.TextInputLayout>

                <Spinner
                    android:layout_width="0dp"
                    android:id="@+id/contract_currency"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_gravity="center_vertical"/>

            </LinearLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:id="@+id/contract_description"
                    android:nextFocusDown="@+id/contract_title"
                    android:hint="@string/hint_description"
                    android:layout_marginBottom="10dp" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_alignParentLeft="true"
                        android:layout_height="wrap_content">

                        <EditText
                            android:enabled="false"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_pictures"/>

                    </android.support.design.widget.TextInputLayout>

                    <ImageButton
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/ic_action_add"
                        android:id="@+id/action_add_image"/>

                </LinearLayout>


                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:id="@+id/image_container"
                        android:layout_gravity="center_vertical">

                    </LinearLayout>

                </HorizontalScrollView>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_height="wrap_content">

                    <EditText
                        android:enabled="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_identity_management"/>

                </android.support.design.widget.TextInputLayout>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:id="@+id/contract_options_radio_group"
                    android:checkedButton="@+id/option_anonymous">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:id="@+id/option_anonymous"
                        android:text="@string/option_anonymous"
                        android:layout_height="wrap_content" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:id="@+id/option_verification"
                        android:text="@string/option_verify"
                        android:layout_height="wrap_content" />

                </RadioGroup>

                <ImageView
                    android:layout_marginTop="16dp"
                    android:id="@+id/action_scan_profile"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_action_scan_qr_code"/>

            </LinearLayout>
            </LinearLayout>
        </ScrollView>

            <LinearLayout
                android:layout_margin="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="deploy"
                    android:background="@drawable/button_selector"
                    android:id="@+id/action_deploy_contract"
                    android:layout_marginRight="10dp"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_selector"
                    android:id="@+id/action_cancel_deploy"
                    android:text="cancel" />

            </LinearLayout>

</LinearLayout>